--- a/src/page_action/page_action.html
+++ b/src/page_action/page_action.html
@@ -40,10 +40,10 @@
 <ul>
   <li><del>Bengali</del></li>
   <li>Hindi</li>
-  <li><del>Kannada</del></li>
+  <li>Kannada</li>
   <li><del>Malayalam</del></li>
   <li><del>Marata</del></li>
-  <li><del>Tamil</del></li>
+  <li>Tamil</li>
   <li>Telugu</li>
 </ul>
 <br><br>
